--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ main {
     float:left;
     background-color:rgba(192,192,192,0.3);
     width:100%;
+    height:100%;
 }
 
 nav ul {
@@ -81,4 +82,10 @@ main ul li{
         margin:0 auto;
         width:30%;
     }
+}
+
+img {
+    padding:2%;
+    display:block;
+    margin:0 auto;
 }
