--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,12 @@ nav ul {
 main ul li{
     color:black;
     list-style:none;
-    display:inline-block;
-    margin:25px;
+    display:block;
+    margin:0 auto;
+    padding:4%;
     width:30%;
     font-size:20px;
+    border:2px solid black;
 }
 
 @media (max-width: 500px) {
