--- a/css/style.css
+++ b/css/style.css
@@ -1,94 +1,45 @@
-body {
-    margin:1%;
-}
-
-nav ul{
+nav {
+    background:#898999;
     text-align:center;
-    background-color:#000000;
-    padding:0;
-    margin:0;
-}
-
-nav li {
-    width: 20%;
-    border-right: 3px solid white;
-    font-size: 140%;
-    display: inline-block;
-    height: 50px;
-    line-height: 50px;
-    margin-right:-4px;
-}
-
-nav li:last-child {
-    border-right:none;
+    font-size:135%;
+    font-family: Arial, "Time New Roman";
+    padding:1%;
 }
 
 nav a{
+    color:white;
     display:block;
+    margin:2%;
     text-decoration:none;
-    color: white;
-    font-size:20px;
-}
-nav a:hover {
-    background-color:grey;
+    border:1px solid white;
+    border-radius: 90px;
+    padding:1%;
 }
 
-figure img {
-    border: 3px solid black;
-    border-radius:80%;
-    width:95%;
-}
-figure {
-    width:20%;
-    margin: 0 auto;
-    margin-top:20px;
-    display:inline-block;
-}
-h1 {
-    font-family:arial, georgia;
-}
-
-h2 {
-    margin-bottom:-20px;
-}
-p {
-    font-size:20px;
-    padding-right:20%;
-    padding-left:20%;
-}
-main {
-    text-align:center;
-    float:left;
-    background-color:rgba(192,192,192,0.3);
-    width:100%;
+section{
+    width:50%;
     height:100%;
+    margin:0 auto;
+    padding:1%;
 }
 
-nav ul {
-    font-size:20px;
-    list-style-type:none;
+@media all and (min-width:900px){
+    nav {
+    background:#898999;
     text-align:center;
+    font-size:150%;
+    font-family: Arial, "Time New Roman";
+    float:left;
+    height:100vh;
+    width:20%;
 }
 
-main ul li{
-    color:black;
-    list-style:none;
-    display:inline-block;
-    margin:0 auto;
-    padding:2%;
-    font-size:20px;
-}
-
-@media (max-width: 500px) {
-    main ul li {
-        display:block;
-        margin:0 auto;
-        width:30%;
-    }
-}
-
-img {
-    padding:2%;
+nav a{
+    color:white;
     display:block;
-    margin:0 auto;
+    margin:10%;
+    text-decoration:none;
+    border:1px solid white;
+    border-radius: 90px;
+}
 }
