--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,17 @@ nav {
 
 nav a{
     color:white;
-    display:block;
+    display:block;    
     margin:2%;
     text-decoration:none;
     border:1px solid white;
     border-radius: 90px;
     padding:1%;
+    transition: .5s ease;
+}
+
+nav a:hover {
+    background:purple;
 }
 
 section{
