--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 nav {
-    background:#898999;
+    background-image:url("../glasses.jpg");
+    background-size:cover;
     text-align:center;
     font-size:135%;
     font-family: Arial, "Time New Roman";
@@ -19,8 +20,8 @@ nav a{
 }
 
 nav a:hover {
-    background:purple;
-    color:white;
+    background:white;
+    color:black;
     text-decoration:none;
 }
 
@@ -28,6 +29,10 @@ section{
     width:50%;
     margin:0 auto;
     padding:1%;
+}
+
+nav img {
+    display:block;
 }
 
 img {
@@ -39,7 +44,8 @@ img {
 @media all and (min-width:900px){
 
 nav {
-    background:#898999;
+    background-image:url("../glasses.jpg");
+    background-size:cover;
     text-align:center;
     font-size:150%;
     font-family: Arial, "Time New Roman";
@@ -65,7 +71,6 @@ img {
     width:25%;
     margin-right:10%;
 }
-
 
 }
 
