--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 nav {
-    background-image:url("../glasses.jpg");
+    background-image:url("../glass.jpg");
     background-size:cover;
     text-align:center;
     font-size:135%;
@@ -44,7 +44,7 @@ img {
 @media all and (min-width:900px){
 
 nav {
-    background-image:url("../glasses.jpg");
+    background-image:url("../glass.jpg");
     background-size:cover;
     text-align:center;
     font-size:150%;
