--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,27 @@
-nav {
-    background-image:url("../glass.jpg");
-    background-size:cover;
-    text-align:center;
-    font-size:135%;
-    font-family: Arial, "Time New Roman";
-    padding:1%;
-    height:100%;
-}
-
-nav a{
-    color:white;
-    display:block;    
-    margin:2%;
-    text-decoration:none;
-    border:2px solid white;
-    border-radius: 90px;
-    padding:1%;
-    transition: .5s ease;
-}
-
-nav a:hover {
-    background:white;
-    color:black;
-    text-decoration:none;
-}
-
-section{
-    width:50%;
-    margin:0 auto;
-    padding:1%;
-}
-
-p, a {
-    font-size: 20px;
-}
-
-nav img {
-    display:block;
-}
-
-img {
-    margin:2%;
-    margin-left: 23%;
-    width:60%;
-}
-
-@media all and (min-width:900px){
-
-nav {
-    background-image:url("../glass.jpg");
-    background-size:cover;
-    text-align:center;
-    font-size:150%;
-    font-family: Arial, "Time New Roman";
-    float:left;
-    width:20%;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-}
-
-nav a{
-    color:white;
-    display:block;
-    margin:10%;
-    text-decoration:none;
-    border:2px solid white;
-    border-radius: 90px;
-}
-
-img {
-    float:right;
-    margin:2%;
-    width:25%;
-    margin-right:10%;
-}
+nav.navbar {
+    background: hsl(0, 0%, 96%);
+    color: hsl(0, 0%, 4%);
+    font-family: 'News Cycle', sans-serif;
 
 }
 
-   
+.navbar-brand {
+    /*center text in nav bar*/
+    margin: 0 auto;
+    font-size: 30px;
+}
+
+#bio {
+    margin-top: 1%;
+}
+
+.is-parent, .is-child {
+    background: hsl(0, 0%, 100%);
+}
+
+.is-parent {
+    border: solid 2px;
+    font-family: 'News Cycle', sans-serif;
+    color: hsl(0, 0%, 4%);
+
+}
